# auto_ria_bot

./: .env.example  README.md  pyproject.toml  requirements.txt
bot/: __main__.py  config.py  db.py  parser.py  utilts.py
