[tool.poetry]
name = "parser-bot2"
version = "0.1.0"
description = ""
authors = ["DmitroPodolsky <podolskijdmitro1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
loguru = "^0.7.2"
pydantic = "1.10.9"
python-dotenv = "^1.0.0"
aiohttp = "^3.6.3"
pre-commit = "^3.6.0"
aiogram = "2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
